k8s/manifests/staging/ingress-nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mvp-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    nginx.ingress.kubernetes.io/whitelist-source-range: "193.148.22.2"
spec:
  rules:
  - host: $(STAGING_CD_HOST)
    http:
      paths:
      - path: /
        backend:
          serviceName: mvp-cd
          servicePort: 80
  - host: $(STAGING_CM_HOST)
    http:
      paths:
      - path: /
        backend:
          serviceName: mvp-cm
          servicePort: 80
  - host: $(STAGING_ID_HOST)
    http:
      paths:
      - path: /
        backend:
          serviceName: mvp-id
          servicePort: 80
  - host: $(STAGING_HOST)
    http:
      paths:
      - path: /
        backend:
          serviceName: mvp-rendering
          servicePort: 80

  tls:
  - secretName: staging-tls
    hosts:
    - $(STAGING_HOST)
    - $(STAGING_ID_HOST)
    - $(STAGING_CM_HOST)
    - $(STAGING_CD_HOST)
